Bug 1122403 - IonMonkey: Fix folding of unsigned Div and Mod r=nbp